--- a/public/css/styles-productDetail.css
+++ b/public/css/styles-productDetail.css
@@ -1,5 +1,4 @@
-/* ESTILOS DE DETALLE DE PRODUCTO */
-
+/* ESTILOS DEL DETALLE DE PRODUCTO */
 
 /* IMAGENES EN MINIATURA */
 .contenedor-imagenes-pequeñas {
