--- a/src/views/index.html
+++ b/src/views/index.html
@@ -82,6 +82,7 @@
 
     
     <main>
+        <!----------------- BANNER DE IMAGENES PARA LA VERSION MOVIL ------------------------>
         <section class="banner-imagenes-movil">
             <article class="slider-box">
                 <ul>
@@ -94,6 +95,7 @@
             </article>
         </section>
     
+        <!----------------- BANNER DE IMAGENES PARA LA VERSION ESCRITORIO Y TABLET ------------------------>
         <section class="banner-imagenes">
             <article class="slider-box">
                 <ul>
@@ -106,11 +108,13 @@
             </article>
         </section>
 
+        <!----------------- AQUI ESTAN LOS PRODUCTOS DESTACADOS DEL USUARIO ------------------------>
         <section class="contenedor-productos-destacados">
             <article class="titulo-contenedor">
                 <h3>Productos Destacados</h3>
             </article>
 
+            <!----------------- AQUI ESTAN LOS PRODUCTOS DESTACADOS PARA MOSTRAR EN EL HOME ------------------------>
             <article>
                 <article class="contenedor-productos">
                     <div class="producto">
@@ -168,17 +172,19 @@
                 </article>
             </article>
 
+            <!----------------- BOTON PARA VER MAS PRODUCTOS; DEBERIA LLEVAR A OTRA VISTA ------------------------>
             <article class="ver-mas">
                 <a href="">Ver más <i class="fa-solid fa-chevron-right"></i></a>
             </article>
         </section>
 
+        <!----------------- AQUI ESTAN LOS PRODUCTOS EN OFERTA PARA EL USUARIO ------------------------>
         <section class="contenedor-productos-ofertas">
             <article class="titulo-contenedor">
                 <h3>Ofertas</h3>
             </article>
 
-
+            <!----------------- AQUI ESTAN LOS PRODUCTOS EN OFERTA PARA MOSTRAR EN EL HOME ------------------------>
             <article>
                 <article class="contenedor-productos">
 
@@ -237,13 +243,16 @@
                 </article>
             </article>
 
+            <!----------------- BOTON PARA VER MAS PRODUCTOS; DEBERIA LLEVAR A OTRA VISTA ------------------------>
             <article class="ver-mas">
                 <a href="">Ver más <i class="fa-solid fa-chevron-right"></i></a>
             </article>
         </section>
 
+        <!----------------- AQUI ESTAN LA SECCION DE NOTICIAS PARA EL USUARIO ------------------------>
         <section class="contenedor-noticias">
 
+            <!----------------- SOLO SE DISPONDRA DE DOS NOTICIAS CADA UNA CORRESPONDE A UN ARTICLE ------------------------>
             <article class="noticias">
                 <div class="img-noticia">
                     <img src="/img/noticia-1.jpeg" alt="">
@@ -280,6 +289,7 @@
 
         </section>
 
+        <!----------------- AQUI ESTAN LAS MARCAS DE LOS PRODUCTOS; SOLO SE MUEVE EN VERSION MOVIL ------------------------>
         <section class="banner-marcas">
             <article class="slider-box-marcas">
                 <ul>
