--- a/src/views/login.html
+++ b/src/views/login.html
@@ -82,23 +82,30 @@
     </header>
 
     <main>
+        <!----------------- FORMULARIO DE LOGIN ------------------------>
         <section class="fondo-login">
             <article class="contenedor-login">
                 <form action="" method="post">
+
+                    <!----------------- TITULO DEL FORMULARIO ------------------------>
                     <label class="titulo-login">Acceder</label>
 
+                    <!----------------- CAMPOS DEL FORMULARIO ------------------------>
                     <label for="usuario">Usuario o email</label>
                     <input type="text" id="usuario" required>
 
                     <label for="contrasenia">Contraseña</label>
                     <input type="password" id="contrasenia" required>
 
+                    <!----------------- LINKS DEL FORMULARIO ------------------------>
                     <p><a href="">¿Olvidaste tu contraseña?</a> | <a href="/register">Crear cuenta</a></p>
 
+                    <!----------------- BOTON PARA ENVIAR EL FORMULARIO ------------------------>
                     <button type="submit" class="acceder">Acceder</button>
                 </form>
             </article>
 
+            <!----------------- FRASE DEL LOGIN PARA RECIBIR A LOS USUARIOS ------------------------>
             <article class="frase-login">
                 <p>Navega hacia la innovación al ingresar a un océano de oportunidades tecnológicas.</p>
             </article>
