--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -22,7 +22,6 @@
 
 </head>
 
-
 <body>
     <header>
         <article class="mensaje-sup">Elige el camino que te lleve a nuevas profundidades digitales</article>
@@ -81,7 +80,11 @@
     </header>
 
     <main>
+
+        <!----------------- CONTENEDOR DE LAS IMAGENES DEL DETALLE DE PRODUCTO ------------------------>
         <section class="imagenes-producto">
+
+            <!----------------- IMAGENES MINIATURA DEL PRODUCTO ------------------------>
             <article class="contenedor-imagenes-pequeñas">
                 <div><img src="/img/productos/producto-1.webp" alt=""></div>
                 <div><img src="/img/productos/producto-1.webp" alt=""></div>
@@ -89,12 +92,16 @@
                 <div><img src="/img/productos/producto-1.webp" alt=""></div>
             </article>
 
+            <!----------------- IMAGEN PRINCIPAL DEL PRODUCTO ------------------------>
             <article class="contenedor-imagen-principal">
                 <img src="/img/productos/producto-1.webp" alt="">
             </article>
         </section>
 
+        <!----------------- CONTENEDOR DE LA INFORMACION DEL PRODUCTO JUNTO A LOS BOTONES DE ACCION ------------------------>
         <section class="contenedor-detalles-producto">
+
+            <!----------------- INFORMACION DEL PRODUCTO ------------------------>
             <article class="informacion-producto">
                 <p class="marca">HKC</p>
                 <h3>Monitor HKC ANTTEQ F2145M 21.45" 75hz</h3>
@@ -105,16 +112,21 @@
                 porro aut hic incidunt? Deserunt reiciendis assumenda nisi!</p>
             </article>
             
+            <!----------------- AQUI ESTAN LOS BOTONES DE CANTIDAD Y FAVORITOS ------------------------>
             <article class="contenedor-cantidad-favoritos">
+
+                <!----------------- BOTONES PARA AÑADIR LA CANTIDAD DESEADA ------------------------>
                 <article class="boton-cantidad">
-                    <p>Cantidad:</p> <button>-</button><input type="text"><button>+</button> 
+                    <p>Cantidad:</p> <button>-</button><input type="text" value="1"><button>+</button> 
                 </article>
 
+                <!----------------- BOTON PARA AGREGAR A FAVORITOS; FALTA AÑADIR ESA SECCION ------------------------>
                 <article class="boton-favoritos">
                     <button><i class="fa-regular fa-heart"></i></button><p>Favoritos</p>
                 </article>
             </article>
 
+            <!----------------- BOTONES PARA AGREGAR AL CARRITO Y COMPRAR ------------------------>
             <article class="botones-comprar-carrito">
                 <button>Agregar al carrito</button>
                 <button>Comprar ahora</button>
