--- a/src/views/register.html
+++ b/src/views/register.html
@@ -82,11 +82,16 @@
     </header>
 
     <main>
+        
+        <!----------------- FORMULARIO DE REGISTRO ------------------------>
         <section class="fondo-register">
             <article class="contenedor-register">
                 <form action="" method="post">
+
+                    <!----------------- TITULO DEL FORMULARIO ------------------------>
                     <label class="titulo-register">Registrarse</label>
 
+                    <!----------------- CAMPOS DEL FORMULARIO ------------------------>
                     <label for="usuario">Usuario</label>
                     <input type="text" id="usuario" required>
 
@@ -99,12 +104,15 @@
                     <label for="confirmar-contrasenia">Confirmar contraseña</label>
                     <input type="password" id="confirmar-contrasenia" required>
 
+                    <!----------------- VOLVER A LA PAGINA DE LOGIN ------------------------>
                     <a href="/login">¿Ya tienes cuenta? Ingresa</a>
 
+                    <!----------------- BOTON DE REGISTRARSE ------------------------>
                     <button type="submit" class="registrarse">Registrarse</button>
                 </form>
             </article>
 
+            <!----------------- FRASE PARA RECIBIR A LOS USUARIOS QUE SE REGISTRAN ------------------------>
             <article class="frase-register">
                 <p>Explora un mar de posibilidades tecnológicas al abrir la puerta a nuestro mundo digital.</p>
             </article>
