--- a/public/css/styles-header-footer.css
+++ b/public/css/styles-header-footer.css
@@ -7,7 +7,7 @@
 
 main {
     background-color:  #f5f5f5;
-    padding-top: 1px;
+    padding: 1px 0;
 }
 
 /*----------- ESTILOS DEL HEADER -------------------*/
