--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -45,9 +45,13 @@
 
             <!------------------ LOGIN Y REGISTER --------------------->
             <article class="login-icon">
-                <a href="/login"><i class="fa-regular fa-user"></i></a>
+                <a href="/login"><i class="fa-solid fa-user"></i></a>
             </article>
 
+            <article class="favorites-icon">
+                <a href="/favorites"><i class="fa-solid fa-heart"></i></a>
+            </article>
+            
             <article class="cart-icon">
                 <a href="/productcart"><i class="fa-solid fa-cart-arrow-down"></i></a>
             </article>
@@ -68,11 +72,26 @@
             <!---------------------- CATEGORIAS -------------------------->
             <nav class="nav-categorias">
                 <ul>
-                    <li><a href="">Laptops</a></li>
-                    <li><a href="">Oficina</a></li>
-                    <li><a href="">Estudiantes</a></li>
-                    <li><a href="">Accesorios</a></li>
-                    <li><a href="">Gamer</a></li>
+                    <li>
+                        <a href="">Laptops</a>
+                        <div class="nav-gradient"></div>
+                    </li>
+                    <li>
+                        <a href="">Oficina</a>
+                        <div class="nav-gradient"></div>
+                    </li>
+                    <li>
+                        <a href="">Estudiantes</a>
+                        <div class="nav-gradient"></div>
+                    </li>
+                    <li>
+                        <a href="">Accesorios</a>
+                        <div class="nav-gradient"></div>
+                    </li>
+                    <li>
+                        <a href="">Gamer</a>
+                        <div class="nav-gradient"></div>
+                    </li>
                 </ul>
             </nav>
         </section>
