--- a/public/css/styles-index.css
+++ b/public/css/styles-index.css
@@ -26,6 +26,7 @@
     display: none;
 }
 
+/* ANIMACIONES */
 @keyframes slide {
     0% {margin-left: 0;}
     16% {margin-left: 0;}
@@ -67,6 +68,7 @@
 
 /* ESTILOS DE LOS PRODUCTOS */
 
+/* CONTENEDORES */
 .contenedor-productos-destacados, .contenedor-productos-ofertas {
     background-color: white;
     margin: 2rem 1rem;
@@ -80,6 +82,16 @@
     flex-wrap: wrap;
 }
 
+.contenedor-productos img {
+    width: 100%;
+    height: 100%;
+}
+
+.titulo-contenedor {
+    margin: 0.3rem;
+}
+
+/* PRODUCTOS */
 .producto {
     width: 50%;
     border: solid 1px #E5E7E9;
@@ -94,15 +106,6 @@
 
 .producto h4 {
     margin-bottom: 0.3rem;
-}
-
-.contenedor-productos img {
-    width: 100%;
-    height: 100%;
-}
-
-.titulo-contenedor {
-    margin: 0.3rem;
 }
 
 .descuento {
@@ -131,6 +134,16 @@
     display: block;
 }
 
+/* ANIMACIONES */
+@keyframes splash {
+    0% {
+        box-shadow: 0 0 0 rgba(138, 227, 252, 0.89);
+    }
+    100% {
+        box-shadow: 0 0 0 20px rgba(0, 0, 255, 0);
+    }
+}
+
 /* MEDIA QUERIES DE LOS PRODUCTOS */
 
     @media (min-width: 768px) {
@@ -145,6 +158,12 @@
 
         .ver-mas {
             margin: 0.5rem 5% 0.5rem 80%;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .ver-mas:hover {
+            transform: scale(1.04);
+            animation: splash 0.8s;
         }
     }
 
@@ -224,6 +243,15 @@
 
         .noticias {
             width: 50%;
+        }
+
+        .ver-mas-noticias {
+            transition: all 0.3s ease-in-out;
+        }
+
+        .ver-mas-noticias:hover {
+            transform: scale(1.04);
+            animation: splash 0.8s;
         }
     }
 
