--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -76,7 +76,7 @@
     height: 2.5rem;
     align-items: center;
     justify-content: center;
-    font-size: 1rem;
+    font-size: 1.15rem;
     transition: all 0.3s ease-in-out;
 }
 
@@ -88,6 +88,17 @@
     color: white;
     margin-top: 1rem;
 }
+
+/* ANIMACIONES */
+@keyframes splash {
+    0% {
+        box-shadow: 0 0 0 rgba(138, 227, 252, 0.89);
+    }
+    100% {
+        box-shadow: 0 0 0 20px rgba(0, 0, 255, 0);
+    }
+}
+
 
 /* MEDIA QUERIES DEL LOGIN */
 
@@ -108,6 +119,12 @@
     .contenedor-login {
         width: 60vw;
     }
+
+    /*  BOTON ACCEDER */
+    .acceder:hover {
+        animation: splash 0.8s;
+        background-color: #52DEE5;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -122,9 +139,5 @@
 
     .frase-login p {
         font-size: 1.8rem;
-    }
-
-    .acceder:hover {
-        background-color: #034078;
     }
 }
