--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -74,7 +74,7 @@
   height: 2.5rem;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
+  font-size: 1.15rem;
   transition: all 0.3s ease-in-out;
 }
 
@@ -86,6 +86,18 @@
   color: white;
   margin-top: 1rem;
 }
+
+/* ANIMACIONES */
+
+@keyframes splash {
+  0% {
+      box-shadow: 0 0 0 rgba(138, 227, 252, 0.89);
+  }
+  100% {
+      box-shadow: 0 0 0 20px rgba(0, 0, 255, 0);
+  }
+}
+
 
 /* MEDIA QUERIES DEL LOGIN */
 
@@ -106,6 +118,12 @@
     .contenedor-register {
         width: 60vw;
     }
+
+    /*  BOTON ACCEDER */
+    .registrarse:hover {
+      animation: splash 0.8s;
+      background-color: #52DEE5;
+  }
 }
 
 @media (min-width: 1200px) {
